2003-12-28  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b5)

	* MacOS Build now finds jpegtran even if application is renamed.
	* Deployment scripts now create Mac patch (same as the release version)
	  and version checker displays link to new Mac version on Mac.
	* These changes are back-ported from GR 1.3-b12.

2003-12-17  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b4)

	* Now building jpegtran in Mac version, hard-coded ImageMagick
	  path to /usr/local/bin on Mac.
	* Fixed invoking external apps on Mac
	* Fixed loading default image when it's in a jar (for Mac).
	* Upgraded to JarBundler 0.3, which I extended to add support
	  for bundling executables.
	* Fixed BrowserLauncher to correctly detect Panther.
	* The Mac version is now fully functional!

2003-12-17  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b3)

	* Added alerts when ImageMagick or jpegtran are unavailable.
	* No longer showing rotate arrows when jpegtran is unavailable.

2003-12-16  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b2)

	* Fixed Mac version: Native Mac build now works, uses screen menu bar
	  (not window menu bar), uses Command instead of Control for
	  accelerators, uses brushed metal appearance.
	* No longer displaying rotate arrows for pictures when jpegtran
	  is not present.
	* Pruned .java files from JSX library, making it lighter and resolving a
	  conflict with recent versions of IntelliJ.
	  
2003-12-09  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b1)

	* Some apps wouldn't let you drag and drop pictures to GR. This is now fixed
	  and DnD should work from Canon Zoombrowser, Photoshop Album and probably
	  also Linux file managers. No thanks to an article in JavaWorld that
	  had bad code for DnD. Thanks to Jeff "logullo" for testing many debug
	  builds for me.

2003-11-25  Pierre-Luc Paour <gallery@paour.com> (1.2)

	* Release
	* Fixed the usual Java 1.3 bug.

2003-11-09  Pierre-Luc Paour <gallery@paour.com> (1.2-b15)
