@@ -13,10 +13,6 @@
 	<property name="docdist" location="${docbase}/dist/grpackage"/>
 	<property name="iafolder" location="G:\\Program Files\\InstallAnywhere 6 Enterprise"/>
 
-	<taskdef name="jarbundler"
-		classpath="${lib}/jarbundler-0.3.jar"
-		classname="com.loomcom.ant.tasks.jarbundler.JarBundler"/>
-
 	<target name="init">
 		<!-- Create the time stamp -->
 		<tstamp/>
@@ -69,6 +65,7 @@
 			<manifest>
 				<attribute name="Built-By" value="${user.name}"/>
 				<attribute name="Main-Class" value="com.gallery.GalleryRemote.GalleryRemote"/>
+				<attribute name="Class-Path" value="${lib}/metadata-extractor-2.1.jar ${lib}/JSX1.0.7.4.jar img/"/>
 			</manifest>
 		</jar>
 	</target>
@@ -135,28 +132,30 @@
 		</exec>
 	</target>
 
-	<target name="mac_img_jar"
-		description="create a jar of the images for Mac build">
+	<target name="img_jar"
+		description="create a jar of the images">
 
-		<copy file="imagemagick/macos/im.properties" tofile="${img}/im.properties"/>
-		<copy file="jpegtran/macos/jpegtran.properties" tofile="${img}/jpegtran.properties"/>
+		<!--copy file="imagemagick/macos/im.properties" tofile="${img}/im.properties"/>
+		<copy file="jpegtran/macos/jpegtran.properties" tofile="${img}/jpegtran.properties"/-->
 
 		<jar destfile="img.jar">
 			<fileset dir="${img}"/>
 		</jar>
 
-		<delete file="${img}/im.properties"/>
-		<delete file="${img}/jpegtran.properties"/>
+		<!--delete file="${img}/im.properties"/>
+		<delete file="${img}/jpegtran.properties"/-->
 	</target>
 
-	<target name="installer_macosx" depends="jar, mac_img_jar, docs"
+	<target name="executable_macosx" depends="jar, img_jar"
 		description="Build a MacOSX executable">
-		<!--target name="installer_macosx"
-			description="Build a MacOSX executable"-->
 
 		<delete dir="Gallery Remote.app"/>
 
 		<loadproperties srcfile="defaults.properties"/>
+
+		<taskdef name="jarbundler"
+			classpath="${lib}/jarbundler.jar"
+			classname="com.loomcom.ant.tasks.jarbundler.JarBundler"/>
 
 		<jarbundler dir="."
 			name="Gallery Remote"
@@ -171,6 +170,14 @@
 			aboutmenuname="Gallery Remote"
 			jvmversion="1.3+"/>
 
+
+		<copy file="imagemagick/macos/im.properties" tofile="Gallery Remote.app/imagemagick/im.properties" />
+		<copy file="jpegtran/macos/jpegtran.properties" tofile="Gallery Remote.app/jpegtran/jpegtran.properties" />
+	</target>
+
+	<target name="installer_macosx" depends="executable_macosx, docs"
+		description="Build a MacOSX package">
+
 		<tar destfile="GalleryRemote.${version}.MacOSX.NoVM.tgz" compression="gzip">
 			<tarfileset dir="." prefix="Gallery Remote">
 				<include name="Gallery Remote.app/**"/>
@@ -181,12 +188,6 @@
 				mode="777">
 				<include name="*"/>
 			</tarfileset>
-			<!--tarfileset dir="imagemagick" fullpath="Gallery Remote/imagemagick/im.properties">
-				<include name="im.properties.preinstalled" />
-			</tarfileset>
-			<tarfileset dir="jpegtran" fullpath="Gallery Remote/jpegtran/jpegtran.properties">
-				<include name="jpegtran.preinstalled" />
-			</tarfileset-->
 			<tarfileset dir="${docdist}" prefix="Gallery Remote/Documentation">
 				<include name="*"/>
 			</tarfileset>
